# thrift-rust-thrift-include-and-custom-trait-support

compiler/cpp/src/thrift/generate/: t_py_generator.cc  t_rs_generator.cc
lib/rs/: Cargo.toml
lib/rs/src/: lib.rs
lib/rs/src/protocol/: binary.rs  mod.rs
lib/rs/src/server/: simple.rs
lib/rs/src/transport/: buffered.rs  framed.rs  socket.rs
