[package]
name = "thrift"
description = "Rust bindings for the Apache Thrift RPC system"
version = "1.0.0"
license = "Apache-2.0"
authors = ["Apache Thrift Developers <dev@thrift.apache.org>"]
homepage = "http://thrift.apache.org"
documentation = "https://thrift.apache.org"
readme = "README.md"
exclude = ["Makefile*", "test/**"]
keywords = ["thrift"]

[dependencies]
integer-encoding = {version = "~1.0.3", registry = "crates-io-mirror" }
byteorder = {version = "~0.5.3", registry = "crates-io-mirror" }
try_from = {version = "~0.2.0", registry = "crates-io-mirror" }
slog= {version = "~2.4", registry = "crates-io-mirror" }

