[package]
name = "thrift"
description = "Rust bindings for the Apache Thrift RPC system (Juniper Mods)"
version = "1.0.1"
license = "Apache-2.0"
authors = ["Apache Thrift Developers <dev@thrift.apache.org>"]
homepage = "http://thrift.apache.org"
documentation = "https://thrift.apache.org"
readme = "README.md"
exclude = ["Makefile*", "test/**"]
keywords = ["thrift"]
publish = ["juniper"]

[dependencies]
integer-encoding = { version = "1.0.3", registry = "crates-io-mirror" }
log = { version = "~0.3.6", registry = "crates-io-mirror" }
byteorder = { version = "0.5.3", registry = "crates-io-mirror" }
try_from = { version = "0.2.0", registry = "crates-io-mirror" }

